test/types/string/ferguson/literal-octal.chpl
writeln("\125\125");
